--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,29 @@
 {
-  "name": "PWA Course App",
-  "short_name": "VM PWA",
-  "theme_color": "#3a1a86",
-  "background_color": "#1a4f79",
+  "name": "What benefit",
+  "short_name": "Benefit",
+  "theme_color": "#158223",
+  "background_color": "#158223",
   "display": "standalone",
   "orientation": "portrait",
   "start_url": ".",
   "icons": [
     {
-      "src": "/icons/app-icon-96-96.png",
+      "src": "/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/icons/app-icon-144-144.png",
+      "src": "/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/icons/app-icon-256-256.png",
+      "src": "/icons/icon-383x384.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/icons/app-icon-512-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
